Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/InvalidChar1.ru

/? Error Léxico, char con más de un caracter, salida: carácter invalido
'aa'